repote de denuncias error :v

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">LabCalificado3</string>
-    <string name="ubicaion">Ubicaion</string>
+    <string name="ubicaion">Ubicacion</string>
 </resources>
